@@ -1,6 +1,10 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-2.2.4:
+  * slightly incompatible change: SB-EXT:*DERIVE-FUNCTION-TYPES* being NIL now
+    means that function calls will strictly only use type information from
+    proclaimed ftypes. The previous behavior (still the default) of using
+    derived type information from the same file is specified with :SAME-FILE.
   * optimization: fasl files are now usually smaller (up to 10% on default
     policy) and may load faster, especially on high debug.
   * enhancement: debug source locations now work correctly for top level forms
